changes in entitites

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -29,10 +29,8 @@
 		            <h:outputText value=" #{exa.eStartHour}" />
 		        </p:column>
 		
-		        <p:column headerText="End date">
-		            <h:outputText value="#{exa.eEndHour}">
-		            	<f:convertDateTime pattern="HH:mm:ss" />
-		            </h:outputText>
+		        <p:column headerText="End hour">
+		            <h:outputText value="#{exa.eEndHour}" />
 		        </p:column>
 		  
 			</p:dataTable>
