--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -10,6 +10,21 @@
 		<h:outputStylesheet library="css" name="style.css" />
 	</h:head>
 	<h:body>
+			
+		<h:form>			
+    		<p:toolbar>
+    			<p:toolbarGroup align="left">  
+            		<p:commandButton type="button" value="New Exam" icon="ui-icon-document" />  
+        		</p:toolbarGroup>
+   		
+        		<p:toolbarGroup align="right">          		
+            		<p:inputText style="margin-right:10px"/>                    		
+            		<p:commandButton type="button" value="Logout" icon="ui-icon-extlink" />  
+        		</p:toolbarGroup> 
+        	</p:toolbar>       	
+		</h:form>
+			
+		
 		<h:form>
 			<p:dataTable value="#{examListMB.theExams}" var="exa">
 				<f:facet name="header">
