--- a/WebContent/loginPage.xhtml
+++ b/WebContent/loginPage.xhtml
@@ -13,7 +13,7 @@
     <h:body>
       
         <h:form id="form">
-        	<h2>Welcome on the Exam portal!</h2>
+        	<h2><p:outputLabel value="Welcome on the Exam portal!" /></h2>
         	
         	<p:panel id="panel" header="Login">
         	<p:focus context="panel"/>
