Edit Exam, questions and possible answers

--- a/WebContent/addExam.xhtml
+++ b/WebContent/addExam.xhtml
@@ -14,6 +14,18 @@
     <f:facet name="last">
     	<h:outputStylesheet library="css" name="style.css" />
 	</f:facet>
+		<h:form>
+    		<p:toolbar>
+    			<p:toolbarGroup align="left">  
+            		<p:commandButton value="Home" action="index" icon="ui-icon-home" />
+        		</p:toolbarGroup>
+   				
+        		<p:toolbarGroup align="right">
+            		
+        		</p:toolbarGroup>
+        	</p:toolbar>
+		</h:form>
+		<br/>
 	
         <h:form prependId="false">
         	<p:panel id="panel" header="Create a new exam">
