some styling and everything is supposed to works fine

--- a/WebContent/addExam.xhtml
+++ b/WebContent/addExam.xhtml
@@ -69,7 +69,7 @@
 				</p:panelGrid>
 				
 				<f:facet name="footer">
-        			<p:commandButton value="Add exam" update="panel" action="#{examAddMB.saveExam}" icon="ui-icon-disk">
+        			<p:commandButton value="Save" update="panel" action="#{examAddMB.saveExam}" icon="ui-icon-disk">
         				<f:setPropertyActionListener target="#{questionAddMB.examState}" value="new"/>
         			</p:commandButton>
         		</f:facet>
