- Changed name of "listStudentMB" to "StudentListMB" to respect the overall way of writting - Lot of graphical changes - Fixed the filter pb (except all filter of exam which is not really necessary i think) - fixed upcoming/previous display of exams in both index - Exams displayed now depend of the person connected (teacher/student) and if he is related to it - Added table linking Students to an exam - Modified Exam table in DB, adding eIsCorrected (TINYINT(1)) field to know if an exam is corrected or not

--- a/WebContent/listStudent.xhtml
+++ b/WebContent/listStudent.xhtml
@@ -23,9 +23,9 @@
 		
 		
 		<h:form>
-			<p:dataTable id="dataTable" var="stu" value="#{listStudentsMB.allStudents}" sortMode="multiple" 
+			<p:dataTable id="dataTable" var="stu" value="#{studentListMB.allStudents}" sortMode="multiple" 
 					rows="25" paginator="true" widgetVar="studentTable" emptyMessage="No students found with given criteria" 
-					filteredValue="#{listStudentsMB.filteredStudents}">
+					filteredValue="#{studentListMB.filteredStudents}">
 				<f:facet name="header">
 				Students
 					<p:outputPanel>
