fix display of PossibleAnswers after creating an exam

--- a/WebContent/addQuestion.xhtml
+++ b/WebContent/addQuestion.xhtml
@@ -95,6 +95,7 @@
         			<p:commandButton value="Add another question" update="panel" action="#{possibleAnswerAddMB.savePA}" 
         					actionListener="#{questionAddMB.saveQuestion}" icon="ui-icon-circle-plus" style="float:right">
         				<f:param name="returnPage" value="addQuestion" />
+        				<f:setPropertyActionListener value="#{questionAddMB.selectedExam}" target="#{possibleAnswerAddMB.selectedExam}" />
         			</p:commandButton>
         		</f:facet>
         		
