--- a/WebContent/indexStudent.xhtml
+++ b/WebContent/indexStudent.xhtml
@@ -33,7 +33,7 @@
 				</p:row>
 			</p:panelGrid>
 			
-			<p:dataTable value="#{examListMB.upcomingExams}" var="UpExa"
+			<p:dataTable value="#{examListMB.upcomingExams}" var="UpExa" styleClass="datatableHidden"
 					sortMode="multiple" rows="10" paginator="true" widgetVar="upcomingExamTable" 
 					emptyMessage="No exams found with that criteria" filteredValue="#{examListMB.filteredExams}" >
 				<f:facet name="header">
