I did some cleaning and add credit at the bottom of all pages

--- a/WebContent/addExam.xhtml
+++ b/WebContent/addExam.xhtml
@@ -34,7 +34,6 @@
 					<p:inputText id="name" value="#{examAddMB.eName}" size="30" required="true" 
 						requiredMessage="Exam must have a name." placeholder="Enter exam name..." />
 					<p:message for="name" /><br/>
-				
 					
 					<p:inputTextarea id="desc" value="#{examAddMB.eDesc}" cols="66" 
 						placeholder="Exam description / instructions..." /><br/>
@@ -76,5 +75,7 @@
 
 			</p:panel>
 		</h:form>
+		<br/>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
