--- a/WebContent/answerQuestion.xhtml
+++ b/WebContent/answerQuestion.xhtml
@@ -81,7 +81,6 @@
 				    	
 				    </p:panelGrid>
 				    <br/>
-
 				
 				<f:facet name="footer">
         			<p:commandButton value="Save answer" actionListener="#{answerAddMB.saveAnswer}" icon="ui-icon-disk" />
@@ -90,5 +89,7 @@
 			</p:panel>
 
 		</h:form>
+		<br/>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
