--- a/WebContent/indexStudent.xhtml
+++ b/WebContent/indexStudent.xhtml
@@ -103,17 +103,8 @@
 		  
 			</p:dataTable>
 			
-		</h:form> 
-		
+		</h:form>
 		<br/>
-		<br/>
-		
-		
-		
-		<br/>
-		<br/>
-		
-		
-		
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
 	</h:body>
 </html>
