--- a/WebContent/listExamsCorrection.xhtml
+++ b/WebContent/listExamsCorrection.xhtml
@@ -60,6 +60,6 @@
 		</h:form>
 		
 		<br/>
-		
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
 	</h:body>
 </html>
