--- a/WebContent/statistics.xhtml
+++ b/WebContent/statistics.xhtml
@@ -4,8 +4,7 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui"
-    >
+    xmlns:p="http://primefaces.org/ui" >
     <h:head>
 		<title>Statistics</title>
 		<h:outputStylesheet library="css" name="style.css" />
@@ -26,8 +25,7 @@
         	</p:toolbar>
 		</h:form>
 		<br/>
-
-
+		
 		<h:form>
 			<p:panelGrid style="width:100%" styleClass="gridWithoutBorder">
 				<p:row>
@@ -43,7 +41,6 @@
 			</p:panelGrid>
 			
 			<p:separator />
-			
 			
 			<p:panelGrid style="width:100%" styleClass="gridWithoutBorder">
 				<p:row>
@@ -86,14 +83,9 @@
 					</p:column>
 				</p:row>
 				
-				
 			</p:panelGrid>
-			
-			
-			
 		</h:form>
-		
 		<br/>
-		
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
 	</h:body>
 </html>
