--- a/WebContent/addTeacher.xhtml
+++ b/WebContent/addTeacher.xhtml
@@ -26,5 +26,6 @@
 			
 			<p:commandButton value="Add teacher" action="#{teacherAddMB.saveTeacher}"></p:commandButton>
 		</h:form>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
