--- a/WebContent/answerExam.xhtml
+++ b/WebContent/answerExam.xhtml
@@ -162,5 +162,7 @@
 				</p:fieldset>
 			</p:panel>
 		</h:form>
+		<br/>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
