--- a/WebContent/congrats.xhtml
+++ b/WebContent/congrats.xhtml
@@ -30,5 +30,7 @@
 			</p:panelGrid>
 	        
         </h:form>
+        <br/>
+        <p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
