--- a/WebContent/correctExam.xhtml
+++ b/WebContent/correctExam.xhtml
@@ -7,7 +7,7 @@
     xmlns:p="http://primefaces.org/ui"
     >
     <h:head>
-		<title>Exam of #{studentListMB.selectedStudent.sLastName}, #{studentListMB.selectedStudent.sFirstName}</title>
+		<title>Exam correction</title>
 		<h:outputStylesheet library="css" name="style.css" />
 	</h:head>
 	<h:body>
@@ -117,8 +117,7 @@
 					</p:panelGrid>
 				</p:fieldset>
 		</h:form>
-		
 		<br/>
-		
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
 	</h:body>
 </html>
