--- a/WebContent/loginPage.xhtml
+++ b/WebContent/loginPage.xhtml
@@ -71,5 +71,6 @@
 				
 			</h:form>
 		</div>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
 	</h:body>
 </html>
