--- a/WebContent/viewExam.xhtml
+++ b/WebContent/viewExam.xhtml
@@ -177,5 +177,6 @@
 
 			</p:panel>
 		</h:form>
+		<p:outputLabel value="Web 2.0 Programming, Linnaeus University, 2013-2014 — Alejandro DE LUZ, Alexis YVIN" styleClass="credit" />
     </h:body>
 </html>
