--- a/WebContent/editQuestion.xhtml
+++ b/WebContent/editQuestion.xhtml
@@ -58,6 +58,17 @@
 				    	
 				    	<p:row>
 					    	<p:column style="width:20%">
+					    		<p:outputLabel for="help" value="Help text" />
+					    	</p:column>
+					    	<p:column style="width:65%">
+					    		<p:inputTextarea id="help" value="#{questionListMB.selectedQuestion.qHelp}" rows="3" cols="33" />
+					    	</p:column>
+					    	<p:column style="width:15%">
+					    	</p:column>
+				    	</p:row>
+				    	
+				    	<p:row>
+					    	<p:column style="width:20%">
 					    		<p:outputLabel value="Answers" />
 					    	</p:column>
 					    	<p:column style="width:65%">
