Students can see teacher's comments and others

--- a/WebContent/correctExam.xhtml
+++ b/WebContent/correctExam.xhtml
@@ -25,7 +25,7 @@
 				<p:panelGrid style="width:100%" styleClass="gridWithoutBorder">
 					<p:row>
 						<p:column>
-							Student: <b><p:outputLabel value="#{studentListMB.selectedStudent.sFirstName} #{studentListMB.selectedStudent.sFirstName}" /></b>
+							Student: <b><p:outputLabel value="#{studentListMB.selectedStudent.sFirstName} #{studentListMB.selectedStudent.sLastName}" /></b>
 						</p:column>
 					</p:row>
 					<p:row>
